@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 2.6)
 
 project(simspark CXX C)
-set(PACKAGE_VERSION "0.2")
+set(PACKAGE_VERSION "0.2.1")
 
 ########## check for headerfiles/libraries ##########
 include(CheckIncludeFile) 
@@ -143,13 +143,13 @@ endif(WIN32)
 set(SALT_SO_VERSION 0)
 set(SALT_VERSION ${SALT_SO_VERSION}.3.2)
 set(ZEITGEIST_SO_VERSION 3)
-set(ZEITGEIST_VERSION ${ZEITGEIST_SO_VERSION}.1.0)
-set(OXYGEN_SO_VERSION 3)
-set(OXYGEN_VERSION ${OXYGEN_SO_VERSION}.3.0)
+set(ZEITGEIST_VERSION ${ZEITGEIST_SO_VERSION}.1.1)
+set(OXYGEN_SO_VERSION 4)
+set(OXYGEN_VERSION ${OXYGEN_SO_VERSION}.0.0)
 set(KEROSIN_SO_VERSION 1)
-set(KEROSIN_VERSION ${KEROSIN_SO_VERSION}.1.0)
+set(KEROSIN_VERSION ${KEROSIN_SO_VERSION}.1.1)
 set(SPARK_SO_VERSION 0)
-set(SPARK_VERSION ${SPARK_SO_VERSION}.0.0)
+set(SPARK_VERSION ${SPARK_SO_VERSION}.0.1)
 set(RCSSNET_SO_VERSION 0)
 set(RCSSNET_VERSION ${RCSSNET_SO_VERSION}.1.0)
 
